tests/negative/traits/dyn_type_not_impl_trait.orng
trait Lol {
    fn lol() -> ()
}

fn main() -> Int {
    let x = 4
    f(&x)
    4
}

fn f(x: &dyn Lol) -> () {
    _ = x
    x.>lol()
}
